--- a/module/Productos/view/productos/categoria/index.phtml
+++ b/module/Productos/view/productos/categoria/index.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'Listado de Categorias';
+$title = 'Listado de Pedidos';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
