--- a/module/Pedidos/view/pedidos/pedido/add.phtml
+++ b/module/Pedidos/view/pedidos/pedido/add.phtml
@@ -1,52 +1,4 @@
-<div class="container-fluid">
-    <div class="row content">
-        <div class="col-sm-3 sidenav">
-            <h4>John's Blog</h4>
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#section1">Home</a></li>
-                <li><a href="#section2">Friends</a></li>
-                <li><a href="#section3">Family</a></li>
-                <li><a href="#section3">Photos</a></li>
-            </ul><br>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search Blog..">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
-            </div>
-        </div>
-
-        <div class="col-sm-9">
-
-            <div class="row">
-                <h3>Seleccione el Producto</h3>
-            </div>
-
-            <div class="row well" style="display:flex; flex-wrap: wrap;">
-                <?php foreach ($productos as $producto ): ?>
-                    <div class="col-sm-4 col-md-3">
-                        <a href="<?php echo $this->url('producto', array('action'=>'edit', 'id' => $producto->getId()));?>">
-                            <div class="thumbnail" style="width:200px; height:150px">
-                                <img src="<?= $producto->getImagen() ?>" alt="<?= $producto->getNombre() ?>" style="width:50%; height:auto">
-                                <div class="caption">
-                                    <h4 id="producto<?= $producto->getId() ?>"><?= $producto->getNombre() ?></h4>
-                                    <p>Precio:<?= $producto->getPreciounidad() ?> BsF por  <?= $producto->getUnidadmedidaventas() ?></p>
-
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                <?php endforeach ?>
-            </div>
-
-        </div>
-
-    </div>
-</div>
-
-<div class="container-fluid">
-    <p>Footer Text</p>
-</div>
+<h1>PedidoController::addAction()</h1>
+<p><?php echo $lastInsertId; ?></p>
+<p><?php echo $codigo; ?></p>
 
