--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,44 +1,67 @@
-<div class="jumbotron">
-    <h1><?php echo sprintf($this->translate('Welcome to %sZend Framework 2%s'), '<span class="zf-green">', '</span>') ?></h1>
-    <p><?php echo sprintf($this->translate('Congratulations! You have successfully installed the %sZF2 Skeleton Application%s. You are currently running Zend Framework version %s. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.'), '<a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">', '</a>', \Zend\Version\Version::VERSION) ?></p>
-    <p><a class="btn btn-success btn-lg" href="https://github.com/zendframework/zf2" target="_blank"><?php echo $this->translate('Fork Zend Framework 2 on GitHub') ?> &raquo;</a></p>
+<div class="row well well-sm text-center">
+    <h1>Sistema de Pedidos Ares</h1>
 </div>
 
-<div class="row">
+<div class="jumbotron">
+    <div class="row placeholders">
 
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Follow Development') ?></h3>
-            </div>
-            <div class="panel-body">
-                <p><?php echo sprintf($this->translate('Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework website which provides links to the ZF2 %swiki%s, %sdev blog%s, %sissue tracker%s, and much more. This is a great resource for staying up to date with the latest developments!'), '<a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">', '</a>', '<a href="http://framework.zend.com/zf2/blog">', '</a>', '<a href="https://github.com/zendframework/zf2/issues">', '</a>') ?></p>
-                <p><a class="btn btn-success pull-right" href="http://framework.zend.com/zf2" target="_blank"><?php echo $this->translate('ZF2 Development Portal') ?> &raquo;</a></p>
+        <div class="col-xs-6 col-sm-4 placeholder">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Módulo de Pedidos</h3>
+                </div>
+                <div class="panel-body text-center">
+                    <i class="icon-clipboardalt" style="font-size: 100px; "></i>
+                    <div class="btn-toolbar">
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-default" href="/pedido" >Listado de Pedidos</a>
+                         </div>
+                        <div class="btn-group pull-right" role="group">
+                            <a class="btn btn-primary" href="<?php echo $this->url('pedido', array('action'=>'add'));?>" >Nuevo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Discover Modules') ?></h3>
-            </div>
-            <div class="panel-body">
-                <p><?php echo sprintf($this->translate('The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available %son GitHub%s. The site is currently live and currently contains a list of some of the modules already available for ZF2.'), '<a href="https://github.com/zendframework/modules.zendframework.com">', '</a>') ?></p>
-                <p><a class="btn btn-success pull-right" href="http://modules.zendframework.com/" target="_blank"><?php echo $this->translate('Explore ZF2 Modules') ?> &raquo;</a></p>
+
+        <div class="col-xs-6 col-sm-4 placeholder">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Módulo de Despacho</h3>
+                </div>
+                <div class="panel-body text-center">
+                    <i class="icon-cartalt" style="font-size: 100px; "></i>
+                    <div class="btn-toolbar">
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-default pull-right" href="<?php echo $this->url('producto');?>" >Listado de Productos</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><?php echo $this->translate('Help &amp; Support') ?></h3>
-            </div>
-            <div class="panel-body">
-                <p><?php echo sprintf($this->translate('If you need any help or support while developing with ZF2, you may reach us via IRC: %s#zftalk on Freenode%s. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the %smailing lists%s.'), '<a href="irc://irc.freenode.net/zftalk">', '</a>', '<a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">', '</a>') ?></p>
-                <p><a class="btn btn-success pull-right" href="http://webchat.freenode.net?channels=zftalk" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
+        <div class="col-xs-6 col-sm-4 placeholder">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Módulo de Administración</h3>
+                </div>
+                <div class="panel-body text-center">
+                    <i class="icon-settingsthree-gears" style="font-size: 100px; "></i>
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-sm" role="group">
+                            <a class="btn btn-default" href="<?php echo $this->url('producto');?>" >Productos</a>
+                            <a class="btn btn-default" href="<?php echo $this->url('categoria');?>" >Categorias</a>
+                            <a class="btn btn-default" href="<?php echo $this->url('unidad-medida');?>" >Unid/Medida</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
+</div>
+
+<div class="row well well-sm text-center">
+    <br><br><br>
 </div>
