--- a/module/Pedidos/view/pedidos/pedido/index.phtml
+++ b/module/Pedidos/view/pedidos/pedido/index.phtml
@@ -2,30 +2,39 @@
 $title = 'Listado de Pedidos';
 $this->headTitle($title);
 ?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
 
-<div class="table-responsive">
-<table class="table table-striped">
-    <tr>
-        <th>Fecha</th>
-        <th>Hora</th>
-        <th>Código del Pedido</th>
-        <th>Nombre del Cliente</th>
-        <th>Estatus</th>
-        <th>Tomado Por</th>
-        <th>Atendido por</th>
-    </tr>
-    <?php foreach ($pedidos as $pedido): ?>
-        <tr>
-            <td><?php echo $pedido->getFecha(); ?>
-            <td><?php echo $pedido->getHora(); ?>
-            <td><strong><?php echo $pedido->getCodigo(); ?></strong></td>
-            <td><strong><?php echo $pedido->getCliente(); ?></strong></td>
-            <td><strong><?php echo $pedido->getMsgclientes(); ?></strong></td>
-            <td><?php echo $pedido->getNombvendedor(); ?>
-            <td><?php echo $pedido->getNombdespachador(); ?>
 
-        </tr>
-    <?php endforeach; ?>
-</table>
+
+<div class="panel panel-default">
+    <div class="panel-heading">Pedidos</div>
+    <div class="panel-body">
+        <!-- List group -->
+        <div class="list-group">
+            <?php foreach ($pedidos as $pedido): ?>
+                <a href="<?php echo $this->url('item', array('pedido' => $pedido->getId()));?>" class="list-group-item">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-2">
+                            Fecha: <?php echo $pedido->getFecha(); ?><br>
+                            Hora: <?php echo $pedido->getHora(); ?>
+                        </div>
+
+
+                        <div class="col-sm-6 col-md-8 text-center text-primary well well-sm">
+                            <strong>Pedido: <?php echo $pedido->getCodigo(); ?> Cliente: <?php echo $pedido->getCliente(); ?> <br>
+                            Estatus: <?php echo $pedido->getMsgclientes(); ?></strong>
+                        </div>
+
+
+                        <div class="col-sm-6 col-md-2">
+                            Tomado por: <?php echo $pedido->getNombvendedor(); ?><br>
+                            Atendido por: <?php echo $pedido->getNombdespachador(); ?>
+                        </div>
+                    </div>
+                </a>
+            <?php endforeach; ?>
+        </div>
+    </div>
 </div>
+
+
+
