--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,66 +1,24 @@
-<div class="row well well-sm text-center">
+<div class="row well well-sm text-center text-primary">
     <h1>Sistema de Pedidos Ares</h1>
 </div>
 
-<div class="jumbotron">
-    <div class="row placeholders">
+<div class="container">
 
-        <div class="col-xs-6 col-sm-4 placeholder">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Módulo de Pedidos</h3>
-                </div>
-                <div class="panel-body text-center">
-                    <i class="icon-clipboardalt" style="font-size: 100px; "></i>
-                    <div class="btn-toolbar">
-                        <div class="btn-group" role="group">
-                            <a class="btn btn-default" href="/pedido" >Listado de Pedidos</a>
-                         </div>
-                        <div class="btn-group pull-right" role="group">
-                            <a class="btn btn-primary" href="<?php echo $this->url('pedido', array('action'=>'add'));?>" >Nuevo</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <form class="form-signin">
+        <h2 class="form-signin-heading">Login</h2>
+        <label for="inputEmail" class="sr-only">Nombre de Usuario</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Nombre de Usuario" required autofocus>
+        <label for="inputPassword" class="sr-only">Contraseña</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me"> Recordarme
+            </label>
         </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Autentificarse</button>
+    </form>
 
-
-        <div class="col-xs-6 col-sm-4 placeholder">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Módulo de Despacho</h3>
-                </div>
-                <div class="panel-body text-center">
-                    <i class="icon-cartalt" style="font-size: 100px; "></i>
-                    <div class="btn-toolbar">
-                        <div class="btn-group" role="group">
-                            <a class="btn btn-default pull-right" href="<?php echo $this->url('producto');?>" >Listado de Productos</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xs-6 col-sm-4 placeholder">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Módulo de Administración</h3>
-                </div>
-                <div class="panel-body text-center">
-                    <i class="icon-settingsthree-gears" style="font-size: 100px; "></i>
-                    <div class="btn-toolbar">
-                        <div class="btn-group btn-group-sm" role="group">
-                            <a class="btn btn-default" href="<?php echo $this->url('producto');?>" >Productos</a>
-                            <a class="btn btn-default" href="<?php echo $this->url('categoria');?>" >Categorias</a>
-                            <a class="btn btn-default" href="<?php echo $this->url('unidad-medida');?>" >Unid/Medida</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
+</div> <!-- /container -->
 
 <div class="row well well-sm text-center">
     <br><br><br>
