--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -38,9 +38,13 @@
                     <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/ares-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo 'Sistema de Pedidos Ares' ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                    </ul>
+                    <?php // <-- Update this !!
+                    echo $this->navigation('navigation')
+                        ->menu()
+                        ->setMinDepth(0)
+                        ->setMaxDepth(0)
+                        ->setUlClass('nav navbar-nav');
+                    ?>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
@@ -54,3 +58,4 @@
         <?php echo $this->inlineScript() ?>
     </body>
 </html>
+
