--- a/module/Pedidos/view/pedidos/item/add.phtml
+++ b/module/Pedidos/view/pedidos/item/add.phtml
@@ -1,36 +1,70 @@
-<div class="well">
-    <?php
-    $title = 'Añadir Item';
-    $this->headTitle($title);
-    ?>
-    <h1><?php echo $this->escapeHtml($title); ?></h1>
+<?php
+$title = 'Añadir Item';
+$this->headTitle($title);
+?>
 
-    <div>
-        <div class="thumbnail">
-            <img src="<?= $producto->getImagen(); ?>" alt="<?= $producto->getNombre() ?>">
-            <div class="caption">
-                <h3 id="producto<?= $producto->getId() ?>"><?= $producto->getNombre() ?></h3>
-                <p>Categoría:<?= $producto->getNombcategoria() ?></p>
-                <p>Precio:<?= $producto->getPreciounidad() ?> BsF por  <?= $producto->getUnidadmedidaventas() ?></p>
+<div class="panel panel-default">
+    <div class="panel-heading text-center"><h1><?php echo $this->escapeHtml($title); ?></h1></div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-sm-8 col-md-8 well">
+                <div class="thumbnail">
+                    <img src="<?= $producto->getImagen(); ?>" alt="<?= $producto->getNombre() ?>">
+                    <div class="caption text-center">
+                        <h3 id="producto<?= $producto->getId() ?>"><?= $producto->getNombre() ?></h3>
+                        <p>Categoría:<?= $producto->getNombcategoria() ?></p>
+                        <p>Precio:<?= $producto->getPreciounidad() ?> BsF por  <?= $producto->getNombunidmedventas() ?></p>
 
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <div class="well">
+                    <?php
+                    $form = $this->form;
+                    $url = $this->url('item', array('action' => 'add', 'pedido' => $idpedido, 'producto' => $idproducto));
+                    $form->setAttribute('action', $url);
+                    $form->get('submit')->setAttribute('value', 'Añadir Item');
+                    $form->prepare();
+
+                    echo $this->form()->openTag($form);
+                    echo $this->formHidden($form->get('pedido'));
+                    echo $this->formHidden($form->get('producto'));
+                ?>
+                    <div class="row">
+                        <?php echo $this->formRow($form->get('seleccion')); ?>
+                        <?php
+                        if ($form->get('seleccion')->getValue() === 'cantidad'){
+                            $form->get('cantidad')->setAttributes(array('readonly'=>true,'disabled'=>true));
+                        }
+                        if ($form->get('seleccion')->getValue() === 'precio'){
+                            $form->get('precio')->setAttributes(array('readonly'=>true,'disabled'=>true));
+                        }
+                        ?>
+                    </div>
+                    <div class="row">
+
+                        <?php echo $this->formRow($form->get('cantidad')).' '.$producto->getNombunidmedventas() ; ?>
+                    </div>
+
+                    <div class="row">
+                        <?php echo $this->formRow($form->get('precio')).' BsF'; ?>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <?php
-    $form = $this->form;
-    $url = $this->url('item', array('action' => 'add', 'pedido' => $idpedido, 'producto' => $idproducto));
-    $form->setAttribute('action', $url);
-    $form->get('submit')->setAttribute('value', 'Añadir Item');
-    $form->prepare();
 
-    echo $this->form()->openTag($form);
-    echo $this->formHidden($form->get('pedido'));
-    echo $this->formHidden($form->get('producto'));
-    echo $this->formRow($form->get('cantidad'));
-    ?>
-    <div>
-        <?php echo $this->formInput($form->get('submit')); ?>
+
     </div>
-    <?php
-    echo $this->form()->closeTag($form); ?>
+
+    <div class="panel-footer text-center">
+
+        <div class="row">
+            <div class="col-sm-6 col-md-6"><a href="<?php echo $this->url('pedido', array('action' =>'edit','id' => $idpedido));?>" class="btn btn-default">Cancelar</a></div>
+            <div class="col-sm-6 col-md-6"><?php echo $this->formInput($form->get('submit')); ?></div>
+        </div>
+        <?php
+        echo $this->form()->closeTag($form); ?>
+    </div>
 </div>
+
