--- a/module/Productos/view/productos/producto/add.phtml
+++ b/module/Productos/view/productos/producto/add.phtml
@@ -1,68 +1,63 @@
-<div class="well">
 <?php
 $title = 'Crear Nuevo Producto';
 $this->headTitle($title);
 ?>
-    <h1><?php echo $this->escapeHtml($title); ?></h1>
-<?php
-$form = $this->form;
-$form->setAttribute('action', $this->url('producto', array('action' => 'add','id' => $id, 'cat' => $cat, 'det' => $det, 'may' => $may)));
-$form->get('submit')->setAttribute('value', 'Add');
-$formLabel = $this->plugin('formLabel');
-$form->prepare();
-?>
-<?php echo $this->form()->openTag($form); ?>
 
-<?php echo $this->formHidden($form->get('id'));?>
-<?php echo $this->formHidden($form->get('idcategoria')); ?>
-    <?php echo $this->formHidden($form->get('unidadmedidaventas')); ?>
-    <?php echo $this->formHidden($form->get('unidadmedidaalmacen')); ?>
+<div class="panel panel-primary">
+    <div class="panel-heading text-center"><h3><?php echo $this->escapeHtml($title); ?></h3></div>
+    <div class="panel-body">
+        <?php
+        $form = $this->form;
+        $form->setAttribute('action', $this->url('producto', array('action' => 'add','id' => $id, 'cat' => $cat, 'det' => $det, 'may' => $may)));
+        $form->get('submit')->setAttribute('value', 'Crear Producto');
+        $formLabel = $this->plugin('formLabel');
+        $form->prepare();
+        ?>
+        <?php echo $this->form()->openTag($form); ?>
 
-    <div class="row">
-        <div class="col-sm-3 col-md-4">
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('nombcategoria')); ?>
-                <p><a href="<?php echo $this->url('categoria', array('action'=>'select'));?>">Seleccionar Categoria</a></p>
+        <?php echo $this->formHidden($form->get('id'));?>
+        <?php echo $this->formHidden($form->get('idcategoria')); ?>
+        <?php echo $this->formHidden($form->get('unidadmedidaventas')); ?>
+        <?php echo $this->formHidden($form->get('unidadmedidaalmacen')); ?>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-6 well">
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('nombcategoria')); ?>
+                    <p><a href="<?php echo $this->url('categoria', array('action'=>'select'));?>">Seleccionar Categoria</a></p>
+                </div>
+
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('nombunidmedventas')); ?>
+                    <p><a href="<?php echo $this->url('unidad-medida', array('action'=>'select','id' => $id, 'tipo' => 'det'));?>">Seleccionar Unidad de Medida</a></p>
+                </div>
+
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('nombunidmedalmacen')); ?>
+                    <p><a href="<?php echo $this->url('unidad-medida', array('action'=>'select','id' => $id, 'tipo' => 'may'));?>">Seleccionar Unidad de Medida</a></p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-3 col-md-4">
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('nombunidmedventas')); ?>
-                <p><a href="<?php echo $this->url('unidad-medida', array('action'=>'select','id' => $id, 'tipo' => 'det'));?>">Seleccionar Unidad de Medida</a></p>
-            </div>
-        </div>
+            <div class="col-sm-6 col-md-6">
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('nombre')); ?>
+                </div>
 
-        <div class="col-sm-3 col-md-4">
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('nombunidmedalmacen')); ?>
-                <p><a href="<?php echo $this->url('unidad-medida', array('action'=>'select','id' => $id, 'tipo' => 'may'));?>">Seleccionar Unidad de Medida</a></p>
-            </div>
-        </div>
-    </div>
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('preciounidad')); ?>
+                </div>
 
-    <div class="row">
-        <div class="col-sm-6 col-md-6">
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('nombre')); ?>
-            </div>
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('preciounidad')); ?>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-            <div class="form-group row">
-                <?php echo $this->formRow($form->get('imagen')); ?>
+                <div class="form-group">
+                    <?php echo $this->formRow($form->get('imagen')); ?>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-sm-12 col-md-12">
-            <?php echo $this->formInput($form->get('submit')); ?>
-        </div>
+    <div class="panel-footer text-right">
+        <a href="<?php echo $this->url('producto') ?>" class="btn btn-default">Volver</a>
+        <?php echo $this->formInput($form->get('submit')); ?>
     </div>
-<?php echo $this->form()->closeTag($form); ?>
-
+    <?php echo $this->form()->closeTag($form); ?>
 </div>
+
+
