--- a/module/Productos/view/productos/producto/index.phtml
+++ b/module/Productos/view/productos/producto/index.phtml
@@ -2,25 +2,52 @@
 $title = 'Listado de Productos';
 $this->headTitle($title);
 ?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
-<p><a href="<?php echo $this->url('producto', array('action'=>'add'));?>">Crear Nuevo Producto</a></p>
+<div class="row"><h1><?php echo $this->escapeHtml($title); ?></h1></div>
 
-<div class="row">
-    <?php foreach ($productos as $producto ): ?>
+<div class="panel panel-primary">
+    <div class="panel-heading text-center">
+        <h3>Seleccione Categoría</h3>
+        <div class="row">
 
-        <div class="col-sm-4 col-md-3">
-            <a href="<?php echo $this->url('producto', array('action'=>'edit', 'id' => $producto->getId()));?>">
-                <div class="thumbnail">
-                    <img src="<?= $producto->getImagen() ?>" alt="<?= $producto->getNombre() ?>">
-                    <div class="caption">
-                        <h3 id="producto<?= $producto->getId() ?>"><?= $producto->getNombre() ?></h3>
-                        <p>Categoría:<?= $producto->getNombcategoria() ?></p>
-                        <p>Precio:<?= $producto->getPreciounidad() ?> BsF por  <?= $producto->getUnidadmedidaventas() ?></p>
+            <form id="my_form" action="<?php $this->url('producto'); ?>" method="post">
+                <ol class="breadcrumb">
+                    <input type="hidden" name="Todos" value="0" />
+                    <li class="active"><input type="submit" class="btn btn-primary" name="selcat" value="Todos" /></li>
+                    <?php foreach ($categorias as $categoria ): ?>
+                        <input type="hidden" name="<?php echo $categoria->getNombre() ?>" value="<?php echo $categoria->getId() ?>" />
+                        <li><input type="submit" class="btn btn-info" name="selcat" value="<?php echo $categoria->getNombre() ?>" /></li>
+                    <?php endforeach ?>
+                </ol>
 
-                    </div>
-                </div>
-            </a>
+            </form>
+
         </div>
+    </div>
+    <div class="panel-body text-center">
+        <div class="row">
+            <h3>Productos Disponibles</h3>
+        </div>
+        <div class="row well text-center">
+            <?php foreach ($productos as $producto ): ?>
 
-    <?php endforeach ?>
+                <div class="col-sm-6 col-md-2">
+                    <a href="<?php echo $this->url('producto', array('action'=>'edit', 'id' => $producto->getId()));?>" class="thumbnail">
+                            <img src="<?= $producto->getImagen() ?>" alt="<?= $producto->getNombre() ?>">
+                            <div class="caption">
+                                <h4 id="producto<?= $producto->getId() ?>"><?= $producto->getNombre() ?></h4>
+                                <p>Categoría:<?= $producto->getNombcategoria() ?></p>
+                                <p>Precio:<?= $producto->getPreciounidad() ?> BsF por  <?= $producto->getNombunidmedventas() ?></p>
+                            </div>
+                    </a>
+                </div>
+
+            <?php endforeach ?>
+        </div>
+    </div>
+    <div class="panel-footer text-right"><a href="<?php echo $this->url('producto', array('action'=>'add'));?>" class="btn btn-primary">Crear Nuevo Producto</a></div>
 </div>
+
+
+
+
+
